<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>gdmatrix</artifactId>
    <groupId>org.matrix</groupId>
    <version>3.0</version>
  </parent>
  <groupId>org.matrix</groupId>
  <artifactId>gdmatrix-stubs</artifactId>
  <version>3.0</version>
  <packaging>jar</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.8</version>
        <executions>
          <execution>
            <id>ant-code-generation</id>
            <phase>generate-sources</phase>
            <configuration>
              <tasks>
                <ant antfile="${basedir}/build.xml" target="build" />
              </tasks>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.helger.maven</groupId>
        <artifactId>jaxws-maven-plugin</artifactId>
        <version>2.6.2</version>
        <executions>
          <execution>
            <id>wsimport_modules</id>
            <goals>
              <goal>wsimport</goal>
            </goals>
            <configuration>
              <keep>true</keep>
              <extension>true</extension>
              <quiet>true</quiet>
              <wsdlDirectory>target/generated-sources/wsdl</wsdlDirectory>
              <wsdlFiles>
                <wsdlFile>security.wsdl</wsdlFile>
                <wsdlFile>dic.wsdl</wsdlFile>
                <wsdlFile>classif.wsdl</wsdlFile>
                <wsdlFile>kernel.wsdl</wsdlFile>
                <wsdlFile>doc.wsdl</wsdlFile>
                <wsdlFile>cases.wsdl</wsdlFile>
                <wsdlFile>cms.wsdl</wsdlFile>
                <wsdlFile>feed.wsdl</wsdlFile>
                <wsdlFile>agenda.wsdl</wsdlFile>
                <wsdlFile>edu.wsdl</wsdlFile>
                <wsdlFile>elections.wsdl</wsdlFile>
                <wsdlFile>forum.wsdl</wsdlFile>
                <wsdlFile>job.wsdl</wsdlFile>
                <wsdlFile>news.wsdl</wsdlFile>
                <wsdlFile>policy.wsdl</wsdlFile>
                <wsdlFile>presence.wsdl</wsdlFile>
                <wsdlFile>report.wsdl</wsdlFile>
                <wsdlFile>search.wsdl</wsdlFile>
                <wsdlFile>sign.wsdl</wsdlFile>
                <wsdlFile>signature.wsdl</wsdlFile>
                <wsdlFile>sql.wsdl</wsdlFile>
                <wsdlFile>survey.wsdl</wsdlFile>
                <wsdlFile>translation.wsdl</wsdlFile>
                <wsdlFile>workflow.wsdl</wsdlFile>
              </wsdlFiles>
              <bindingFiles>
                <bindingFile>jaxb.xml</bindingFile>
              </bindingFiles>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <id>share-generated-resources</id>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <descriptors>
                <descriptor>src/main/assembly/resource.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
  <name>gdmatrix-stubs</name>
  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>gdmatrix-modgen</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.ws</groupId>
      <artifactId>jaxws-ri</artifactId>
      <version>${jaxws-ri.version}</version>
      <type>pom</type>
    </dependency>
  </dependencies>
  <description>GDMatrix stubs generation submodule</description>
</project>